package com.example.projet.CompositionClasse;

import java.util.ArrayList;

public class Constructeur extends CompositionClasse {

    private ArrayList<String> parametres;

    public Constructeur(String acces, String nom, String type) {
        super(acces, nom, type);
    }


}
